# ssheet

./: README.md  ssheet.cabal
examples/: Ssheet.hs  ssheet-example.hs
src/Data/: Ssheet.hs
src/Data/Ssheet/: Csv.hs  Types.hs  Utils.hs  XlsParser.chs  XlsxParser.hs
src/Data/Ssheet/xls-parser/: xls-parser.c  xls-parser.h
tests/: Test.hs  dates.xlsx  dates1904.xlsx  simple.csv  simple.xls  simple.xlsx
