-- cabal install -j happy && cabal install -j alex && PATH="$HOME/.cabal/bin:$PATH" cabal install -j language-c && cabal install -j c2hs

name:               ssheet
version:            0.1.1
synopsis:           xlsx, xls, csv importer into common Map
description:
license:            GPL-3
license-file:       LICENSE
author:             Eugene Skepner
maintainer:         eu@antigenic-cartography.org
-- copyright:
category:           Data
build-type:         Simple

extra-source-files: README.md

cabal-version:      >=1.10


library
  default-language: Haskell2010
  ghc-options:      -W -Wall -O3
  exposed-modules:  Data.Ssheet
  other-modules:    Data.Ssheet.Types Data.Ssheet.Utils Data.Ssheet.XlsxParser Data.Ssheet.Csv Data.Ssheet.XlsParser

  hs-source-dirs:   src

  C-sources:        src/Data/Ssheet/xls-parser/xls-parser.c
  Include-dirs:     src/Data/Ssheet/xls-parser
  Includes:         xls-parser.h

  build-depends:    base >=4.7, bytestring, text >=1.2,
                    time >= 1.0, strptime >=1.0.10,
                    zip-archive >=0.2, xml-conduit >=1.0,
                    filepath, parsec,
                    mtl >=2.1,
                    containers >=0.5.5, aeson >=0.8, aeson-pretty >=0.7

  build-tools:      c2hs


test-suite tests
  default-language: Haskell2010
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  ghc-options:      -W -Wall -O3
  build-depends:    ssheet, base, bytestring, text, unix >=2.7, containers >=0.5.5, time >= 1.0
  main-is:          Test.hs

executable ssheet-example
  default-language: Haskell2010
  hs-source-dirs:   examples
  ghc-options:      -W -Wall -O3
  build-depends:    ssheet, base, bytestring, text, unix >=2.7, containers >=0.5.5, time >= 1.0
  main-is:          ssheet-example.hs
